--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,19 @@ jobs:
       # Step 2: Set up Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
+      
+      # Step 3: Install Docker Compose
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
-      # Step 3: Build and run Docker Compose
+      # Step 4: Build and run Docker Compose
       - name: Build and run Docker Compose
         run: docker-compose up --build -d
 
-      # Step 4: Wait for services to be ready
+      # Step 5: Wait for services to be ready
       - name: Wait for services to be ready
         run: |
           # Aguarda a API estar disponível
@@ -39,10 +46,10 @@ jobs:
             sleep 5
           done
 
-      # Step 5: Run tests
+      # Step 6: Run tests
       - name: Run tests
         run: docker-compose exec api npm test
 
-      # Step 6: Tear down Docker Compose
+      # Step 7: Tear down Docker Compose
       - name: Tear down Docker Compose
         run: docker-compose down
