Corrigir permissões de execução dos scripts

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -7,6 +7,10 @@ RUN apt-get update && apt-get install -y netcat
 # Defina o diretório de trabalho
 WORKDIR /usr/src/app
 
+# Crie um novo usuário e grupo e defina permissões
+RUN adduser --disabled-password --gecos '' appuser && chown -R appuser /usr/src/app
+
+
 # Copie os arquivos de configuração
 COPY package*.json ./
 
@@ -18,6 +22,9 @@ COPY . .
 
 # Adicionar permissão de execução para os scripts
 RUN chmod +x /usr/src/app/entrypoint.sh /usr/src/app/wait-for.sh /usr/src/app/db.sh
+
+# Mude para o novo usuário
+USER appuser
 
 # Exponha a porta da API
 EXPOSE 3333
