--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       # Step 2: Set up Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
-      
+
       # Step 3: Install Docker Compose
       - name: Install Docker Compose
         run: |
@@ -33,27 +33,30 @@ jobs:
         run: docker-compose up --build -d
 
       # Step 5: Wait for services to be ready
-      - name: Wait for services to be ready
+      - name: Wait for API to be available
         run: |
-          # Aguarda a API estar disponível
+          max_attempts=30
+          count=0
           until curl --output /dev/null --silent --head --fail http://localhost:3333; do
-            echo "Aguardando a API estar disponível..."
+            count=$((count + 1))
+            if [ $count -ge $max_attempts ]; then
+              echo "A API não ficou disponível após $max_attempts tentativas."
+              exit 1
+            fi
+            echo "Aguardando a API estar disponível... Tentativa $count de $max_attempts."
             sleep 5
           done
-          # Aguarda a aplicação web estar disponível
-          until curl --output /dev/null --silent --head --fail http://localhost:3000; do
-            echo "Aguardando a aplicação web estar disponível..."
-            sleep 5
-          done
-      
-      # Show logs (for debugging)
+
+      # Step 6: Show logs (for debugging if the API did not start)
       - name: Show API logs
+        if: failure()
         run: docker-compose logs api
 
-      # Step 6: Run tests
+      # Step 7: Run tests
       - name: Run tests
+        if: success()
         run: docker-compose exec api npm test
 
-      # Step 7: Tear down Docker Compose
+      # Step 8: Tear down Docker Compose
       - name: Tear down Docker Compose
         run: docker-compose down
