Corrigir script wait-for.sh e instalar nodemon

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -4,6 +4,9 @@ FROM node:19
 # Instalar netcat
 RUN apt-get update && apt-get install -y netcat
 
+# Instalar nodemon globalmente
+RUN npm install -g nodemon
+
 # Defina o diretório de trabalho
 WORKDIR /usr/src/app
 
