Adicionar sucrase às dependências e atualizar Dockerfile

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -1,26 +1,26 @@
 # Use a imagem base do Node.js
 FROM node:19
 
-# Instalar netcat
+# Instalar netcat (necessário para o script wait-for.sh)
 RUN apt-get update && apt-get install -y netcat
-
-# Instalar nodemon globalmente
-RUN npm install -g nodemon
 
 # Defina o diretório de trabalho
 WORKDIR /usr/src/app
 
-# Copie o restante do código para o diretório de trabalho
+# Copie os arquivos de configuração do Node.js
+COPY package*.json ./
+
+# Instalar as dependências (incluindo devDependencies)
+RUN npm install
+
+# Copiar o restante do código da aplicação
 COPY . .
 
 # Adicionar permissão de execução para os scripts
 RUN chmod +x /usr/src/app/entrypoint.sh /usr/src/app/wait-for.sh /usr/src/app/db.sh
 
-# Instale as dependências
-RUN npm install
-
 # Exponha a porta da API
 EXPOSE 3333
 
 # Define o script de entrada
-ENTRYPOINT ["sh", "/usr/src/app/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/usr/src/app/entrypoint.sh"]
