--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^9.0.0",
-    "cypress": "^13.14.2"
+    "cypress": "^13.14.2",
+    "nodemon": "^3.1.4",
+    "sucrase": "^3.35.0"
   },
   "dependencies": {
     "pg": "^8.12.0"
