Forçar a instalação de todas as dependências e listar o conteúdo de node_modules

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -1,11 +1,8 @@
 # Use a imagem base do Node.js
-FROM node:19
+FROM node:18
 
 # Instalar netcat (necessário para o script wait-for.sh)
 RUN apt-get update && apt-get install -y netcat
-
-# Instalar nodemon globalmente
-RUN npm install -g nodemon
 
 # Defina o diretório de trabalho
 WORKDIR /usr/src/app
@@ -16,8 +13,11 @@ COPY package*.json ./
 # Definir a variável de ambiente NODE_ENV para 'development'
 ENV NODE_ENV=development
 
-# Instalar as dependências (incluindo devDependencies)
-RUN npm install
+# Forçar a instalação de todas as dependências, incluindo as de desenvolvimento
+RUN npm install --include=dev
+
+# Verificar as dependências instaladas
+RUN ls -la node_modules && ls -la node_modules/sucrase
 
 # Copiar o restante do código da aplicação
 COPY . .
@@ -25,8 +25,8 @@ COPY . .
 # Adicionar permissão de execução para os scripts
 RUN chmod +x /usr/src/app/entrypoint.sh /usr/src/app/wait-for.sh /usr/src/app/db.sh
 
-# Exponha a porta da API
+# Expor a porta da API
 EXPOSE 3333
 
-# Define o script de entrada
+# Definir o script de entrada
 ENTRYPOINT ["/bin/sh", "/usr/src/app/entrypoint.sh"]
