Ajustar volume no docker-compose e copiar código antes da instalação das dependências

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -7,8 +7,8 @@ RUN apt-get update && apt-get install -y netcat
 # Defina o diretório de trabalho
 WORKDIR /usr/src/app
 
-# Copiar os arquivos de configuração do Node.js
-COPY package*.json ./
+# Copiar o código da aplicação
+COPY . .
 
 # Limpar o cache do npm e definir o ambiente como development
 RUN npm cache clean --force
@@ -19,9 +19,6 @@ RUN npm install
 
 # Instalar nodemon globalmente
 RUN npm install -g nodemon
-
-# Copiar o restante do código da aplicação
-COPY . .
 
 # Adicionar permissão de execução para os scripts
 RUN chmod +x /usr/src/app/entrypoint.sh /usr/src/app/wait-for.sh /usr/src/app/db.sh
