Remover npm install do Dockerfile e instalar dependências na pipeline

--- a/apps/zombieplus/api/Dockerfile
+++ b/apps/zombieplus/api/Dockerfile
@@ -10,6 +10,16 @@ WORKDIR /usr/src/app
 # Copiar o código da aplicação
 COPY . .
 
+# Limpar o cache do npm e definir o ambiente como development
+RUN npm cache clean --force
+ENV NODE_ENV=development
+
+# Instalar as dependências
+RUN npm install
+
+# Instalar nodemon globalmente
+RUN npm install -g nodemon
+
 # Adicionar permissão de execução para os scripts
 RUN chmod +x /usr/src/app/entrypoint.sh /usr/src/app/wait-for.sh /usr/src/app/db.sh
 
