--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Configuração da aplicação
     steps:
       # Checkout o repositório
       - name: Checkout repository
@@ -27,14 +27,22 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
-      
-      # Install Project Dependencies
-      - name: Install dependencies
-        run: npm install
 
       # Build and run Docker Compose
       - name: Build and run Docker Compose
         run: docker-compose up --build -d
+
+  test:
+    runs-on: ubuntu-latest
+    name: Execução dos testes
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Install Project Dependencies
+      - name: Install dependencies
+        run: npm install
 
       # Wait for services to be ready
       - name: Wait for API to be available
@@ -54,6 +62,14 @@ jobs:
       # Run Cypress tests
       - name: Run Cypress tests
         run: npx cypress run
+
+  teardown:
+    runs-on: ubuntu-latest
+    name: Finalizar serviços
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       # Tear down Docker Compose
       - name: Tear down Docker Compose
