--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Configuração da aplicação
+    services:
+      db:
+        image: postgres:13
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 1234
+          POSTGRES_DB: dbname
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       # Checkout o repositório
       - name: Checkout repository
@@ -31,11 +46,17 @@ jobs:
       # Build and run Docker Compose
       - name: Build and run Docker Compose
         run: docker-compose up --build -d
+      
+      # Save Docker state for other jobs
+      - name: Save Docker Host
+        run: echo "DOCKER_HOST=tcp://localhost:2375" >> $GITHUB_ENV
 
   test:
     runs-on: ubuntu-latest
     name: Execução dos testes
     needs: build
+    env:
+      DOCKER_HOST: ${{ env.DOCKER_HOST }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -71,6 +92,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Finalizar serviços
     needs: test
+    env:
+      DOCKER_HOST: ${{ env.DOCKER_HOST }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
