--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,27 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout o repositório
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Install Docker Compose
-      - name: Install Docker Compose
+      - name: Instalação docker compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
 
-      # Step 4: Build and run Docker Compose
-      - name: Build and run Docker Compose
+      - name: Inicialização da aplicação
         run: docker-compose up --build -d
 
-      # Step 5: Wait for services to be ready
-      - name: Wait for API to be available
+      - name: Esperar API ficar disponível
         run: |
           max_attempts=10
           count=0
@@ -47,14 +42,11 @@ jobs:
             sleep 5
           done
 
-      # Step 6: Install Cypress dependencies
-      - name: Install Cypress dependencies
-        run: npm install cypress --save-dev
+      - name: Instalação das dependências
+        run: npm install
 
-      # Step 7: Run Cypress tests
-      - name: Run Cypress tests
+      - name: Execução dos testes
         run: npx cypress run
 
-      # Step 8: Tear down Docker Compose
-      - name: Tear down Docker Compose
+      - name: Finalizar docker
         run: docker-compose down
