--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Projeto de automação de teste frontend e backend da aplicação Zombieplus",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "npx cypress open",
+    "cy:headless": "npx cypress run --spec ./cypress/e2e/WEB"
   },
   "author": "Eder Cuer",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^9.0.0",
     "cypress": "^13.14.2",
+    "cypress-plugin-api": "^2.11.2",
     "nodemon": "^3.1.4",
     "sucrase": "^3.35.0"
   },
