--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "npx cypress open",
-    "cy:headless": "npx cypress run --spec ./cypress/e2e/WEB"
+    "cy:headless": "npx cypress run --spec ./cypress/e2e/WEB",
+    "cy:regression": "npx cypress run"
   },
   "author": "Eder Cuer",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^9.0.0",
     "cypress": "^13.14.2",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-plugin-api": "^2.11.2",
     "nodemon": "^3.1.4",
     "sucrase": "^3.35.0"
