--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "npx cypress open",
-    "cy:headless": "npx cypress run --spec ./cypress/e2e/WEB",
+    "regression:front": "npx cypress run --spec ./cypress/e2e/WEB",
+    "regression:back": "npx cypress run --spec ./cypress/e2e/API",
     "cy:regression": "npx cypress run"
   },
   "author": "Eder Cuer",
