--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,18 +12,17 @@ on:
 jobs:
   testes:
     runs-on: ubuntu-latest
-
     services:
       sonarqube:
         image: sonarqube:lts
         ports:
           - 9000:9000
-         options: >
+         options: |
           --health-cmd="curl -s http://localhost:9000/api/system/health | grep -q 'GREEN'" 
           --health-interval=10s 
           --health-timeout=5s 
           --health-retries=50
-
+  
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
