--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,7 @@ jobs:
         ports:
           - 9000:9000
         options: >
-          --health-cmd="curl http://localhost:9000/api/system/health | grep -q 'GREEN'"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=50
+          --health-cmd="curl -f http://localhost:9000/api/system/health | grep -q 'GREEN'" --health-interval=10s --health-timeout=5s --health-retries=50
 
     steps:
       - name: Checkout repository
