--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         image: sonarqube:lts
         ports:
           - 9000:9000
-        options: >
+        options: |
           --health-cmd="curl -f http://localhost:9000/api/system/health | grep -q 'GREEN'" --health-interval=10s --health-timeout=5s --health-retries=50
 
     steps:
