--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,6 @@ jobs:
         image: sonarqube:lts
         ports:
           - 9000:9000
-        options: |
-          --health-cmd="curl -f http://localhost:9000/api/system/health | grep -q 'GREEN'" --health-interval=10s --health-timeout=5s --health-retries=50
 
     steps:
       - name: Checkout repository
@@ -35,6 +33,20 @@ jobs:
 
       - name: Inicialização da aplicação
         run: docker-compose up --build -d
+      
+      - name: Verificar SonarQube
+        run: |
+          max_attempts=10
+          count=0
+          until curl --silent --fail http://localhost:9000/api/system/health | grep -q 'GREEN'; do
+            count=$((count + 1))
+            if [ $count -ge $max_attempts ]; then
+              echo "O SonarQube não ficou disponível após $max_attempts tentativas."
+              exit 1
+            fi
+            echo "Aguardando o SonarQube estar disponível... Tentativa $count de $max_attempts."
+            sleep 5
+          done
 
       - name: Esperar API ficar disponível
         run: |
