--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=projeto-cypress
 
 # Nome do projeto (opcional)
-sonar.projectName=projeto-cypress
+sonar.projectName=edercuer
 
 # Versão do projeto
 sonar.projectVersion=1.0
@@ -14,10 +14,9 @@ sonar.sources=./cypress
 sonar.language=js
 
 # Endereço do SonarQube
-sonar.host.url=http://localhost:9000
-
-# Token de autenticação gerado anteriormente
-sonar.login=squ_f038a77e7d6857fce728b7a3299ae77a86c74b85
+sonar.host.url=https://sonarcloud.io
 
 # Relatório de cobertura de testes (ajuste conforme necessário)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.login=${SONAR_TOKEN}
