--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,19 +46,16 @@ jobs:
             sleep 5
           done
 
-      - name: Instalação do Sonar Scanner
-        run: |
-          # Baixar o Sonar Scanner
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-          
-          # Descompactar o Sonar Scanner
-          unzip sonar-scanner-cli-4.8.0.2856-linux.zip
-          
-          # Mover para /opt para facilitar o uso
-          sudo mv sonar-scanner-4.8.0.2856-linux /opt/sonar-scanner
-          
-          # Adicionar ao PATH
-          echo 'export PATH=/opt/sonar-scanner/bin:$PATH' >> $GITHUB_ENV
+      - name: Análise de Código com SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=projeto-cypress
+            -Dsonar.organization=edercuer
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Instalação das dependências
         run: npm install
