Adicionando Sonar para análise estática de código

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=projeto-cypress
 
 # Nome do projeto (opcional)
-sonar.projectName=edercuer
+sonar.projectName=projeto-cypress
 
 # Versão do projeto
 sonar.projectVersion=1.0
