--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  testes:
+  setup:
     runs-on: ubuntu-latest
-
+    outputs:
+      api_url: ${{ steps.api.outputs.api_url }}
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -30,7 +32,17 @@ jobs:
         run: docker-compose down
 
       - name: Inicialização da aplicação
-        run: docker-compose up --build -d
+        id: api
+        run: |
+          docker-compose up --build -d
+          echo "::set-output name=api_url::http://localhost:3333"
+
+  tests:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Esperar API ficar disponível
         run: |
@@ -69,6 +81,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./cypress/reports
           publish_branch: gh-pages
+
+  teardown:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Finalizar docker
         run: docker-compose down
