--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,18 +31,15 @@ jobs:
       - name: Remover containers antigos
         run: docker-compose down
 
-      - name: Inicialização da aplicação
-        id: api
-        run: |
-          docker-compose up --build -d
-          echo "::set-output name=api_url::http://localhost:3333"
-
   tests:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Inicialização da aplicação
+        run: docker-compose up --build -d
 
       - name: Esperar API ficar disponível
         run: |
