--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
-      api_url: ${{ steps.api.outputs.api_url }}
+      network_id: ${{ steps.network_id.outputs.network }}
       
     steps:
       - name: Checkout repository
@@ -21,6 +21,12 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
+
+      - name: Criar rede Docker compartilhada
+        id: network_id
+        run: |
+          docker network create my_shared_network
+          echo "::set-output name=network::my_shared_network"
 
       - name: Instalação docker compose
         run: |
@@ -31,15 +37,22 @@ jobs:
       - name: Remover containers antigos
         run: docker-compose down
 
+      - name: Inicializar a aplicação no Docker com rede compartilhada
+        run: |
+          docker-compose up --build -d
+        env:
+          NETWORK_ID: ${{ steps.network_id.outputs.network }}
+
   tests:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: setup # Depende do job de setup
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Inicialização da aplicação
-        run: docker-compose up --build -d
+      - name: Conectar à rede Docker compartilhada
+        run: |
+          docker network connect my_shared_network $(docker-compose ps -q)
 
       - name: Esperar API ficar disponível
         run: |
@@ -72,19 +85,14 @@ jobs:
       - name: Execução dos testes
         run: npm run cy:regression
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./cypress/reports
-          publish_branch: gh-pages
-
   teardown:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: tests # Depende do job de testes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Finalizar docker
-        run: docker-compose down
+      - name: Finalizar containers e remover rede
+        run: |
+          docker-compose down
+          docker network rm my_shared_network
