--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,29 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      - name: Instalação docker compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
+
       - name: Criar rede Docker compartilhada
         id: network_id
         run: |
           docker network create my_shared_network
           echo "::set-output name=network::my_shared_network"
+
+      - name: Inicializar a aplicação no Docker com rede compartilhada
+        run: |
+          docker-compose up --build -d --force-recreate
+
+  tests:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Instalação docker compose
         run: |
@@ -34,25 +52,16 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
 
-      - name: Remover containers antigos
-        run: docker-compose down
+      - name: Obter ID dos containers da aplicação
+        id: get_containers
+        run: echo "::set-output name=containers::$(docker-compose ps -q)"
 
-      - name: Inicializar a aplicação no Docker com rede compartilhada
+      - name: Conectar containers à rede Docker compartilhada
         run: |
-          docker-compose up --build -d
-        env:
-          NETWORK_ID: ${{ steps.network_id.outputs.network }}
-
-  tests:
-    runs-on: ubuntu-latest
-    needs: setup # Depende do job de setup
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Conectar à rede Docker compartilhada
-        run: |
-          docker network connect my_shared_network $(docker-compose ps -q)
+          containers="${{ steps.get_containers.outputs.containers }}"
+          for container in $containers; do
+            docker network connect my_shared_network $container
+          done
 
       - name: Esperar API ficar disponível
         run: |
@@ -87,7 +96,8 @@ jobs:
 
   teardown:
     runs-on: ubuntu-latest
-    needs: tests # Depende do job de testes
+    needs: tests
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
