--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,18 @@ jobs:
 
       - name: Inicializar a aplicação no Docker com rede compartilhada
         run: |
-          docker-compose up --build -d --force-recreate
+          docker-compose up --build -d
 
   tests:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: setup # Depende do job de setup
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
 
       - name: Instalação docker compose
         run: |
@@ -52,16 +55,9 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
 
-      - name: Obter ID dos containers da aplicação
-        id: get_containers
-        run: echo "::set-output name=containers::$(docker-compose ps -q)"
-
-      - name: Conectar containers à rede Docker compartilhada
+      - name: Conectar containers à rede compartilhada
         run: |
-          containers="${{ steps.get_containers.outputs.containers }}"
-          for container in $containers; do
-            docker network connect my_shared_network $container
-          done
+          docker-compose exec -T api sh -c 'docker network connect my_shared_network $(hostname)'
 
       - name: Esperar API ficar disponível
         run: |
@@ -96,7 +92,7 @@ jobs:
 
   teardown:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: tests # Depende do job de testes
 
     steps:
       - name: Checkout repository
