--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,11 @@ jobs:
         run: |
           docker-compose up --build -d
 
+      - name: Verificar se o container API está em execução
+        run: |
+          docker-compose ps
+          docker-compose ps api
+          
   tests:
     runs-on: ubuntu-latest
     needs: setup # Depende do job de setup
@@ -54,10 +59,6 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose version
-
-      - name: Conectar containers à rede compartilhada
-        run: |
-          docker-compose exec -T api sh -c 'docker network connect my_shared_network $(hostname)'
 
       - name: Esperar API ficar disponível
         run: |
