--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    services:
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+
     outputs:
       network_id: ${{ steps.network_id.outputs.network }}
       
@@ -42,7 +47,7 @@ jobs:
         run: |
           docker-compose ps
           docker-compose ps api
-          
+
       - name: Esperar API ficar disponível (10 tentativas)
         run: |
           max_attempts=10
@@ -59,6 +64,11 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    services:
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+
     needs: setup # Depende do job de setup
 
     steps:
@@ -67,12 +77,6 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
-
-      - name: Instalação docker compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
 
       - name: Verificar status da API novamente
         run: |
